guest/guest-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-guest
spec:
  selector:
    matchLabels:
      app: guest
  replicas: 2
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: guest
    spec:
      containers:
      - name: container
        image: academyitwill/guest:v1
        imagePullPolicy: Always
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-guest
spec:
  selector:
   app: guest
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
