guest/guest-ReplicaSet1.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-guest
spec:
  selector:
    app: guest
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
