guest/guest-ReplicaSet2.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-guest2
spec:
  selector:
    app: guest2
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
  type: NodePort
