guest/guest-ReplicaSet3.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-guest3
spec:
  selector:
    app: guest3
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30003
  type: NodePort
