guest/guest-Ingress1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-guest-v1
  labels:
    app: guest-v1
spec:
  containers:
  - name: container
    image: academyitwill/guest:v1
    imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-guest-v1
spec:
  selector:
     app: guest-v1
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-guest-v1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-guest-v1
            port:
              number: 80
